# Mp4gif

./: .gitignore  CMakeLists.txt  README.md  build.bat  generate_gif.bat
.github/workflows/: build.yml
src/: mp4gif.cpp
